--- a/Lesson 7/css/main.css
+++ b/Lesson 7/css/main.css
@@ -45,6 +45,10 @@ body {
   margin: 40px;
 }
 
+/* body:hover {
+  background-color: #458ff6;
+} */
+
 .container {
   max-width: 1120px;
   margin: 0 auto;
