--- a/2-month/Lesson 4/css/main.css
+++ b/2-month/Lesson 4/css/main.css
@@ -1,4 +1,69 @@
-html::-webkit-scrollbar-track {
+body {
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box {
+  width: 100px;
+  height: 100px;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  -webkit-box-shadow: 0px 5px 10px 10px rgba(255, 255, 255, 0.2) inset;
+  -moz-box-shadow: 0px 5px 10px 10px rgba(255, 255, 255, 0.2) inset;
+  box-shadow: 0px 5px 10px 10px rgba(255, 255, 255, 0.2) inset;
+  font-size: 30px;
+  /* animation: anime 3s ease-in forwards infinite; */
+  /* animation-name: anime;
+  animation-duration: 5s; */
+  /* animation-iteration-count: infinite; */
+  /* animation-fill-mode: forwards; */
+  /* animation-delay: 2s; */
+  /* animation-iteration-count: infinite; */
+  /* animation-timeline: ease; */
+  /* translateX(200px) translateY(100px) */
+  /* transform: translate(200px, 100px) rotate(90deg) scale(1); */
+}
+
+/* @keyframes anime {
+  0% {
+    transform: translate(0, 0) scale(1);
+  }
+
+  25% {
+    transform: translate(200px, 0) scale(1.3);
+  }
+
+  50% {
+    transform: translate(200px, 200px) scale(1.5);
+  }
+
+  75% {
+    transform: translate(0, 200px) scale(1.3);
+  }
+
+  100% {
+    transform: translate(0, 0) scale(1);
+  }
+} */
+
+@keyframes anime {
+  from {
+    transform: scale(0);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
+
+/* html::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
   background-color: #cccccc;
 }
@@ -32,7 +97,7 @@ body {
 .wrapper__container {
   height: 500px;
   background-image: url(../images/greenline.jpeg);
-}
+} */
 
 /* @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
