--- a/2-month/Lesson 9/css/main.css
+++ b/2-month/Lesson 9/css/main.css
@@ -16,10 +16,6 @@ body {
   padding: 0 20px;
 }
 
-body {
-  background-color: black;
-}
-
 .header {
   padding-top: 53px;
 }
@@ -97,4 +93,77 @@ body {
   .header__cta {
     display: none;
   }
+}
+.hero {
+  padding: 342px 0 140px 0;
+  background-image: url(../../images/sartarosh.png), url(../images/hero__bg.jpeg);
+  background-repeat: no-repeat;
+  background-size: 720px 625px, cover;
+  background-position: right bottom;
+}
+
+.subtitle {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 106.5%;
+  color: #fbb034;
+}
+
+.hero__container .title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 94.5%;
+  color: #fff;
+  max-width: 513px;
+  margin: 22px 0;
+}
+
+.hero__container .info {
+  max-width: 350px;
+  color: #b8b8b8;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 106.5%;
+}
+
+.hero__container .hero__btns {
+  display: flex;
+  gap: 40px;
+  margin-top: 80px;
+}
+
+.cta__btn {
+  padding: 18px 0;
+  min-width: 182px;
+  color: #000;
+  background-color: #fbb034;
+  border: 1px solid #fbb034;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 15px;
+  transition: all 0.3s ease;
+  padding: 18px 53px;
+}
+.cta__btn:hover {
+  background-color: #000;
+  color: #fbb034;
+}
+
+.service__btn {
+  padding: 18px 0;
+  min-width: 182px;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 15px;
+  transition: all 0.3s ease;
+  padding: 18px 53px;
+}
+.service__btn:hover {
+  background-color: #fff;
+  color: transparent;
 }/*# sourceMappingURL=main.css.map */
