--- a/2-month/Lesson 9/scss/blocks/_hero.scss
+++ b/2-month/Lesson 9/scss/blocks/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
   padding: 342px 0 140px 0;
-  background-image: url(../../images/sartarosh.png), url(../images/hero__bg.jpeg);
+  background-image: url(../../images/sartarosh.png),
+    url(../images/hero__bg.jpeg);
   background-repeat: no-repeat;
   background-size: 720px 625px, cover;
   background-position: right bottom;
@@ -44,4 +45,38 @@
 .service__btn {
   @include button($white, transparent, $white);
   padding: 18px 53px;
+}
+
+@media (max-width: 525px) {
+  .hero {
+    padding-top: 140px;
+  }
+  
+  .hero__container .title {
+    font-size: 30px;
+  }
+
+  .hero__btns {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 1024px) {
+  .hero {
+    background-image: url(../../images/hero__bg.jpeg);
+    background-size: cover;
+    background-position: unset;
+  }
+
+  .hero__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hero__container .title,
+  .info {
+    text-align: center;
+  }
 }
